data/derived/sp14/progs/unify/prog1305.ml.out
Characters 250-276:
  let args = List.combine(List.rev l1, List.rev l2) in
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
